--- a/templates/index.html
+++ b/templates/index.html
@@ -21,30 +21,29 @@
    </ul>
    {% endif %}
    {% endwith %}
-   <nav class="navbar navbar-dark bg-dark ">
+   <!-- <nav class="navbar navbar-dark bg-dark ">
       <a class="navbar-brand navbar-center" href="#">Video Compressor</a>
-   </nav>
-   <div class="container">
-      <div class="starter-template">
-         <h2>To Compress Video</h2>
-         <p>Upload a video (Max Video Duration Supports in 30sec due to using gmail services for video transfer either app will crash)</p>
-      </div>
+   </nav> -->
+   <div class="container" style="margin: 0; background-color: black;">
+      <div class="starter-template" style="background-color: black; color: white; width: 100vw;">
+         <h2>Compress Video</h2>
+         </div>
    </div>
 
 
+<br><br>
 
-
-   <div class="container">
+   <div class="container" style="margin: 0;">
       <form method=post enctype=multipart/form-data>
-        <label for="fname">Name:</label>
+        <label for="fname"><b>Name :</b></label>
         <input type="text" id="name" name="name"><br><br>
-        <label for="lname">Email :</label>
+        <label for="lname"><b>Email :</b></label>
          <input type="text" id="lname" name="e_mail">
          <br><br>
-          <label for="lname"> Compress Ratio:</label>
+          <label for="lname"><b>Compress Ratio :</b></label>
           <input type="number" id="value" name="value">
          <input type=file name=file onchange="loadFile(event)">
-         <input type=submit value=Upload class="btn btn-primary">
+         <input type=submit value=Upload class="btn btn-info">
       </form>
       <img id="output" alt="" width="40%" height="40%" />
    </div>
